--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "vue": "^2.1.0",
-    "vue-router": "^2.1.3"
+    "vue-router": "^2.1.3",
+    "vuex": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -65,6 +67,7 @@
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^4.1.1",
     "selenium-server": "2.53.1",
     "semver": "^5.3.0",
