BW-28 Implement localization in the store, and make use of it from inside the components

--- a/src/config/app.json
+++ b/src/config/app.json
@@ -1,4 +1,6 @@
 {
+  "defaultLanguage": "en",
+  "activeLanguages": ["en", "it"],
   "api": {
     "baseUrl": "http://www.italomairo.com/bworks-d8/web/"
   }
