--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "es6-promise": "^4.0.5",
+    "prerender-spa-plugin": "^2.0.1",
     "vue": "^2.1.0",
     "vue-router": "^2.1.3",
     "vuex": "^2.1.1"
