--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "es6-promise": "^4.0.5",
-    "prerender-spa-plugin": "^2.0.1",
+    "scrollmagic": "^2.0.5",
     "vue": "^2.1.0",
     "vue-router": "^2.1.3",
     "vuex": "^2.1.1"
@@ -37,6 +36,7 @@
     "cross-env": "^3.1.3",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
+    "es6-promise": "^4.0.5",
     "eslint": "^3.7.1",
     "eslint-config-standard": "^6.1.0",
     "eslint-friendly-formatter": "^2.0.5",
@@ -69,6 +69,7 @@
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
+    "prerender-spa-plugin": "^2.0.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.1.1",
     "selenium-server": "2.53.1",
