--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "scrollmagic": "^2.0.5",
     "vue": "^2.1.0",
     "vue-router": "^2.1.3",
     "vuex": "^2.1.1"
