--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "image-preloader": "^1.1.1",
     "scrollmagic": "^2.0.5",
     "vue": "^2.2.4",
     "vue-router": "^2.1.3",
