--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "image-preloader": "^1.1.1",
     "scrollmagic": "^2.0.5",
     "vue": "^2.2.4",
+    "vue-i18n": "beta",
     "vue-router": "^2.1.3",
     "vuex": "^2.1.1"
   },
