--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "image-preloader": "^1.1.1",
+    "jump.js": "^1.0.2",
     "scrollmagic": "^2.0.5",
     "vue": "^2.2.4",
     "vue-i18n": "beta",
