--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jump.js": "^1.0.2",
     "scrollmagic": "^2.0.5",
     "vue": "^2.2.4",
+    "vue-analytics": "^3.2.1",
     "vue-i18n": "beta",
     "vue-router": "^2.1.3",
     "vuex": "^2.1.1"
