--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "expose-loader": "^0.7.3",
+    "fullpage.js": "^2.9.4",
     "image-preloader": "^1.1.1",
     "jump.js": "^1.0.2",
     "scrollmagic": "^2.0.5",
