--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cross-env": "^3.2.4",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.27.3",
+    "es6-promise": "^4.1.0",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^6.1.0",
     "eslint-friendly-formatter": "^2.0.5",
@@ -76,6 +77,7 @@
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
+    "prerender-spa-plugin": "^2.0.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.1.1",
     "selenium-server": "2.53.1",
