--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-istanbul": "^3.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.24.0",
@@ -73,7 +74,7 @@
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "nightwatch": "^0.9.14",
-    "node-sass": "^4.5.1",
+    "node-sass": "^4.5.2",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
@@ -97,5 +98,10 @@
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
