--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "shelljs": "^0.7.7",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.9.0",
+    "sitemap": "^1.12.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
