--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-analytics": "^3.2.1",
     "vue-i18n": "beta",
     "vue-router": "^2.1.3",
+    "vue2-google-maps": "^0.7.5",
     "vuex": "^2.1.1"
   },
   "devDependencies": {
