--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
 .DS_Store
 node_modules/
-npm-debug.log
-test/unit/coverage
-test/e2e/reports
-selenium-debug.log
+# dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 /src/config/app.json
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
