--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.2.1",
     "jump.js": "^1.0.2",
     "locutus": "^2.0.8",
+    "lodash": "^4.17.4",
     "scrollmagic": "^2.0.5",
     "sitemap": "^1.12.0",
     "vue": "^2.3.3",
@@ -33,6 +34,7 @@
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
@@ -56,6 +58,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "lodash-webpack-plugin": "^0.11.4",
     "node-sass": "^4.5.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
