--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,8 @@
 {
   "presets": [
-    ["env", {
-      "modules": false,
-      "targets": {
-        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
-      }
-    }],
-    "stage-2"
+    ["env", { "modules": false }]
   ],
-  "plugins": ["transform-runtime", "lodash"],
-  "env": {
-    "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["istanbul"]
-    }
-  }
+  "plugins": [
+    "syntax-dynamic-import"
+  ]
 }
