--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .DS_Store
 node_modules/
-# dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+dist/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
 /src/config/app.json
 
