--- a/package.json
+++ b/package.json
@@ -5,45 +5,52 @@
   "author": "Stefan Kudwien <stefan.kudwien@b-works.io>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "dev": "node server",
+    "start": "cross-env NODE_ENV=production node server",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "lint": "eslint --ext .js,.vue src"
+  },
+  "engines": {
+    "node": ">=7.0",
+    "npm": ">=4.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "compression": "^1.7.0",
+    "cross-env": "^5.0.1",
+    "es6-promise": "^4.1.0",
     "expose-loader": "^0.7.3",
+    "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "flexslider": "^2.6.3",
     "fullpage.js": "^2.9.4",
     "image-preloader": "^1.1.1",
     "jquery": "^3.2.1",
     "jump.js": "^1.0.2",
     "locutus": "^2.0.8",
-    "lodash": "^4.17.4",
+    "lru-cache": "^4.1.1",
     "scrollmagic": "^2.0.5",
+    "serve-favicon": "^2.4.3",
     "sitemap": "^1.12.0",
     "vue": "^2.4.1",
     "vue-analytics": "^4.1.2",
     "vue-i18n": "^7.0.5",
     "vue-router": "^2.7.0",
+    "vue-server-renderer": "^2.4.1",
     "vue2-google-maps": "^0.7.5",
-    "vuex": "^2.1.1"
+    "vuex": "^2.3.1",
+    "vuex-router-sync": "^4.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.24.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.4.0",
     "css-loader": "^0.28.0",
-    "es6-promise": "^4.1.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
@@ -51,40 +58,22 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "lodash-webpack-plugin": "^0.11.4",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "glob": "^7.1.1",
     "node-sass": "^4.5.2",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.2.0",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
+    "vue-loader": "^13.0.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.1",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
+    "webpack": "^3.2.0",
+    "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "webpack-merge": "^4.1.0",
+    "webpack-node-externals": "^1.6.0"
+  }
 }
