--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "",
+    "name": "B-Works.io",
     "icons": [
         {
             "src": "/static/favicon/android-chrome-192x192.png",
