--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Stefan Kudwien <stefan.kudwien@b-works.io>",
   "private": true,
   "scripts": {
-    "dev": "node server",
+    "dev": "nodemon server",
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
