Add pm2, update extract-text-webpack-plugin for webpack 3

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Stefan Kudwien <stefan.kudwien@b-works.io>",
   "private": true,
   "scripts": {
-    "dev": "nodemon server",
+    "dev": "node server",
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
@@ -23,7 +23,6 @@
     "es6-promise": "^4.1.0",
     "expose-loader": "^0.7.3",
     "express": "^4.15.3",
-    "extract-text-webpack-plugin": "^2.1.0",
     "flexslider": "^2.6.3",
     "fullpage.js": "^2.9.4",
     "image-preloader": "^1.1.1",
@@ -31,6 +30,7 @@
     "jump.js": "^1.0.2",
     "locutus": "^2.0.8",
     "lru-cache": "^4.1.1",
+    "pm2": "^2.6.1",
     "scrollmagic": "^2.0.5",
     "serve-favicon": "^2.4.3",
     "sitemap": "^1.12.0",
@@ -58,6 +58,7 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
