--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "now-start": "NODE_ENV=production node node_modules/.bin/pm2 start server.js -i max --attach",
+    "now-build": "",
     "lint": "eslint --ext .js,.vue src"
   },
   "engines": {
