--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "Stefan Kudwien <stefan.kudwien@b-works.io>",
   "private": true,
   "scripts": {
-    "dev": "node server",
-    "start": "cross-env NODE_ENV=production node server",
+    "dev": "DEBUG=axios node server",
+    "start": "NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "build:client": "NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "now-start": "NODE_ENV=production node server",
     "now-build": "",
     "lint": "eslint --ext .js,.vue src"
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
+    "axios-debug-log": "^0.3.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
