--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "now-start": "NODE_ENV=production node server",
-    "now-build": "",
+    "now-start": "node server",
+    "now-build": "false",
     "lint": "eslint --ext .js,.vue src"
   },
   "engines": {
