Remove b-works.io domain, disable debugging
b-works.io now redirects to www.b-works.io.

--- a/now.json
+++ b/now.json
@@ -1,11 +1,9 @@
 {
   "name": "bworks",
   "alias": [
-    "b-works.io",
     "www.b-works.io"
   ],
   "env": {
-    "NODE_ENV": "production",
-    "DEBUG": "axios"
+    "NODE_ENV": "production"
   }
 }
