--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "dependencies": {
     "axios": "^0.16.2",
     "axios-debug-log": "^0.3.0",
+    "babel-runtime": "^6.26.0",
     "compression": "^1.7.0",
     "cross-env": "^5.0.1",
-    "es6-promise": "^4.1.0",
+    "es6-promise": "^4.1.1",
     "expose-loader": "^0.7.3",
     "express": "^4.15.3",
     "flexslider": "^2.6.3",
@@ -53,6 +54,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
