Update browserslist config to support older targets

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,19 @@
 {
   "presets": [
-    ["env", { "modules": false }]
+    ["env", {
+      "targets": {
+        "browsers": [
+          "> 0.5% in DE",
+          "> 0.5% in CH",
+          "last 2 versions",
+          "Firefox ESR",
+          "iOS >= 9",
+          "Safari >= 9",
+          "Android >= 4.4"
+        ]
+      },
+      "modules": false
+    }]
   ],
   "plugins": [
     "syntax-dynamic-import",
