--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "scripts": {
     "dev": "DEBUG=axios node server",
     "start": "NODE_ENV=production node server",
-    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:dist": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "now-start": "NODE_ENV=production node server",
-    "now-build": "",
     "lint": "eslint --ext .js,.vue src"
   },
   "browserslist": [
