--- a/now.json
+++ b/now.json
@@ -3,5 +3,11 @@
   "alias": [
     "www.b-works.io"
   ],
+  "scale": {
+    "bru1": {
+      "min": 1,
+      "max": 1
+    }
+  },
   "env": {}
 }
