--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
+/node_modules/
 .DS_Store
-node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
 
 # Editor directories and files
-.idea
+/.idea/
+/dist/
 *.suo
 *.ntvs*
 *.njsproj
