--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "author": "Stefan Kudwien <stefan.kudwien@b-works.io>",
   "private": true,
   "scripts": {
-    "dev": "DEBUG=axios node server",
-    "start": "NODE_ENV=production node server",
-    "build:dist": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "now-start": "NODE_ENV=production node server",
+    "dev": "cross-env DEBUG=axios node server",
+    "start": "cross-env NODE_ENV=production node server",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "lint": "eslint --ext .js,.vue src"
   },
   "browserslist": [
@@ -22,10 +21,6 @@
     "Safari >= 9",
     "Android >= 4.4"
   ],
-  "engines": {
-    "node": ">=7.0",
-    "npm": ">=4.0"
-  },
   "dependencies": {
     "axios": "^0.16.2",
     "axios-debug-log": "^0.3.0",
