--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "b-works",
-  "version": "2.0.0",
-  "description": "B-Works SPA based on full-featured Webpack + vue-loader setup with hot reload, linting & css extraction.",
+  "version": "3.0.0",
+  "description": "B-Works single-page application using server-side rendering.",
   "author": "Stefan Kudwien <stefan.kudwien@b-works.io>",
   "private": true,
   "scripts": {
@@ -13,13 +13,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "browserslist": [
-    "> 0.5% in DE",
     "> 0.5% in CH",
+    "> 0.5% in DE",
+    "> 0.5% in IT",
     "last 2 versions",
-    "Firefox ESR",
-    "iOS >= 9",
-    "Safari >= 9",
-    "Android >= 4.4"
+    "Firefox ESR"
   ],
   "dependencies": {
     "axios": "^0.16.2",
@@ -28,7 +26,6 @@
     "compression": "^1.7.1",
     "cross-env": "^5.1.1",
     "es6-promise": "^4.1.1",
-    "expose-loader": "^0.7.3",
     "express": "^4.16.2",
     "flexslider": "^2.6.3",
     "fullpage.js": "^2.9.4",
@@ -37,8 +34,8 @@
     "jump.js": "^1.0.2",
     "locutus": "^2.0.8",
     "lru-cache": "^4.1.1",
-    "pm2": "^2.6.1",
     "raven-js": "^3.17.0",
+    "route-cache": "^0.4.3",
     "scrollmagic": "^2.0.5",
     "serve-favicon": "^2.4.5",
     "sitemap": "^1.12.0",
@@ -54,31 +51,25 @@
   "devDependencies": {
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "chokidar": "^1.7.0",
     "css-loader": "^0.28.7",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "cssnano": "^4.0.3",
+    "expose-loader": "^0.7.3",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "glob": "^7.1.1",
     "node-sass": "^4.5.2",
+    "postcss-loader": "^2.1.6",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
-    "vue-loader": "^14.0.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-loader": "^15.0.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
