--- a/package.json
+++ b/package.json
@@ -56,26 +56,27 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "chokidar": "^1.7.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^1.0.0",
     "cssnano": "^4.0.3",
     "expose-loader": "^0.7.3",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.5.2",
     "postcss-loader": "^2.1.6",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^7.0.3",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
     "vue-loader": "^15.0.0",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^3.8.1",
+    "webpack": "^4.16.1",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-dev-middleware": "^1.12.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.20.0",
-    "webpack-merge": "^4.1.1",
+    "webpack-merge": "^4.1.3",
     "webpack-node-externals": "^1.6.0"
   }
 }
