--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "compression": "^1.7.1",
     "cross-env": "^5.1.1",
     "express": "^4.16.2",
-    "flexslider": "^2.6.3",
-    "fullpage.js": "^2.9.4",
+    "flexslider": "^2.7.1",
+    "fullpage.js": "^3.0.1",
     "image-preloader": "^1.1.1",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "jump.js": "^1.0.2",
     "locutus": "^2.0.8",
     "lru-cache": "^4.1.1",
@@ -66,6 +66,7 @@
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
+    "script-loader": "^0.7.2",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
     "vue-loader": "^15.0.0",
