--- a/src/config/app.json
+++ b/src/config/app.json
@@ -7,6 +7,7 @@
   },
   "siteEmail": "alex.beninca@b-works.io",
   "googleApiKey": "AIzaSyCg0cUaKJQL-kkKIW3vW4nBug-kNsq1cm0",
+  "googleAnalyticsId": "UA-97185138-1",
   "social": {
     "facebook": "https://www.facebook.com/Bworks.io",
     "twitter": "https://twitter.com/_B_works",
