Fetch data through middleware
Append `?refresh` to any url to force querying from the backend, otherwise the data comes from memory cache.

--- a/src/config/app.json
+++ b/src/config/app.json
@@ -3,6 +3,7 @@
   "defaultLanguage": "en",
   "activeLanguages": ["de", "en"],
   "api": {
+    "middlewareUrl": "https://middleware-tnraoqipqg.now.sh/",
     "baseUrl": "https://backend.b-works.io/"
   },
   "siteEmail": "alex.beninca@b-works.io",
