--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-runtime": "^6.26.0",
     "compression": "^1.7.1",
     "cross-env": "^5.1.1",
+    "es6-promise": "^4.1.1",
     "express": "^4.16.2",
     "flexslider": "^2.7.1",
     "fullpage.js": "^3.0.1",
